# Primordial

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/assets/data/: Settings.configuration  settings.config
client/assets/data/languages/: french.lang  german.lang  spanish.lang
client/builds/debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
client/builds/debug/.cmake/api/v1/reply/: cache-v2-3e804067050c163133fc.json  cmakeFiles-v1-11732029905df2ef3e9c.json  codemodel-v2-40d08882a72d3659212a.json  index-2022-07-04T14-01-52-0093.json  target-Launcher-Debug-6f772169f54c39bd24c8.json
client/builds/debug/libraries/glfw-3.3.7/: cmake_install.cmake  cmake_uninstall.cmake
client/builds/debug/libraries/glfw-3.3.7/src/: cmake_install.cmake
client/builds/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
client/builds/release/.cmake/api/v1/reply/: cache-v2-0f731bfbca1f419a970b.json  cmakeFiles-v1-2318e3b01eb95f47256a.json  codemodel-v2-72930f94686dd37371bd.json  index-2022-07-04T14-01-52-0093.json  target-Launcher-Release-20ad9ab0654fa02a472c.json
client/builds/release/libraries/glfw-3.3.7/: cmake_install.cmake  cmake_uninstall.cmake
client/builds/release/libraries/glfw-3.3.7/src/: cmake_install.cmake
client/includes/: client.h  client_status.h
client/includes/gamestate/: connected_state.h  game_state.h  splash_screen_state.h  state.h  title_screen_state.h
client/includes/input/: input.h  input_codes.h
client/includes/platform/linux/: window.h
client/includes/platform/macos/: window.h
client/includes/platform/windows/: window.h
client/includes/rendering/opengl/: index_buffer.h  vertex_buffer.h
client/includes/rendering/vulkan/: vertex_array.h
client/includes/utility/: localization.h  server_launcher.h  settings.h
client/libraries/glad/include/glad/: glad.h
client/libraries/glad/src/: glad.c
client/libraries/glfw-3.3.7/docs/: CONTRIBUTING.md  compile.dox
client/libraries/glfw-3.3.7/docs/html/: compile_guide.html  jquery.js
client/libraries/glfw-3.3.7/include/GLFW/: glfw3.h
client/libraries/glfw-3.3.7/src/: mappings.h
client/source/: Client.cpp  Client.h  Game.cpp  Game.h  Main.cpp  client.cpp  client_status.cpp  main.cpp
client/source/Data/: Settings.configuration
client/source/gamestate/: LobbyState.cpp  LobbyState.h  PlayingState.cpp  PlayingState.h  SplashScreenState.cpp  SplashScreenState.h  TitleScreenState.cpp  TitleScreenState.h  connected_state.cpp  game_state.cpp  splash_screen_state.cpp  title_screen_state.cpp
client/source/input/: Input.h  InputCodes.h
client/source/platform/linux/: LinuxServerLauncher.cpp  ServerLauncher.h  Window.h  linux_server_launcher.cpp  linux_window.cpp
client/source/platform/macos/: MacOSWindow.cpp  Window.h  macos_server_launcher.cpp  macos_window.cpp
client/source/platform/windows/: Window.h  WindowsServerLauncher.cpp  WindowsWindow.cpp  windows_server_launcher.cpp  windows_window.cpp
client/source/rendering/: OrthographicCamera.cpp  OrthographicCamera.h  Renderer2D.cpp  Renderer2D.h  Texture.h
client/source/rendering/opengl/: Buffer.cpp  Buffer.h  RenderCommand.cpp  RenderCommand.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  vertex_buffer.cpp
client/source/rendering/vulkan/: Shader.h
client/source/utility/: Localization.cpp  Localization.h  localization.cpp  settings.cpp
documentation/: README.md
server/: CMakeLists.txt
server/builds/debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
server/builds/debug/.cmake/api/v1/reply/: cache-v2-f14b4daa95c60a1c3d9e.json  cmakeFiles-v1-51f14f84f603362a9499.json  codemodel-v2-c48ffd4d975586cbc9e6.json  index-2022-07-04T14-03-43-0933.json  target-ServerLauncher-Debug-4dc6905d06293fc28d7d.json
server/builds/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
server/builds/release/.cmake/api/v1/reply/: cache-v2-05445993b0b02a9cf9b1.json  cmakeFiles-v1-52949f43bdb9fa4ef096.json  codemodel-v2-ed50099b273dee373570.json  index-2022-07-04T14-03-43-0935.json  target-ServerLauncher-Release-fd6d9900773ee1e2f57a.json
server/includes/: server.h  server_status.h
server/source/: Main.cpp  Server.cpp  Server.h  main.cpp  server.cpp  server_status.cpp
server/source/Data/: Settings.configuration
shared/: Utility.h
shared/ecs/components/: CameraFocusComponent.h  SpriteComponent.h  TransformComponent.h
shared/ecs/entt/: entt.hpp  fwd.hpp
shared/ecs/entt/container/: dense_map.hpp  dense_set.hpp
shared/ecs/entt/core/: any.hpp  family.hpp  fwd.hpp  memory.hpp  monostate.hpp  type_info.hpp  type_traits.hpp
shared/ecs/entt/entity/: component.hpp  entity.hpp  fwd.hpp  group.hpp  handle.hpp  helper.hpp  mixin.hpp  observer.hpp  organizer.hpp  registry.hpp  snapshot.hpp  (+3 more)
shared/ecs/systems/: SpriteRenderingSystem.cpp  SpriteRenderingSystem.h  System.h  TestSystem.cpp  TestSystem.h
shared/events/: ApplicationEvent.h  Event.h  EventBus.h  EventManagementSystem.h  EventSystem.cpp  EventSystem.h  InputEvent.h  application_events.h  event.h  event_system.cpp  event_system.h  fast_delegate_bind.h
shared/gamestate/: GameState.cpp  GameState.h  State.h
shared/glm/detail/: _fixes.hpp
shared/includes/: types.h
shared/includes/networking/: networking_utilities.h  socket_address.h  udp_socket.h
shared/includes/utility/: logger.h  system_timer.h
shared/libraries/glm/: CMakeLists.txt
shared/platform/linux/: LinuxWindow.cpp  SystemTimer.cpp  SystemTimer.h  Window.h
shared/platform/macos/: MacOSWindow.cpp  SystemTimer.cpp  Window.h
shared/platform/windows/: SystemTimer.cpp  SystemTimer.h  Window.h  WindowsWindow.cpp
shared/source/networking/: socket_address.cpp
shared/source/utility/: logger.cpp
shared/utility/: Logger.cpp  Logger.h  Settings.cpp  Settings.h  Utility.cpp  Utility.h
source/: PlatformDetection.h  utility.h
source/client/: Game.cpp  Game.h  Main.cpp  Window.h
source/events/: EventManagementSystem.cpp  EventManagementSystem.h
source/platform/macos/: Window.h
source/platform/osx/: OSXWindow.cpp  OSXWindow.h
source/platform/windows/: WindowsWindow.h
(+28 files in other folders)
